--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
 <body>
     <h1>ACERTE O NÚMERO SECRETO</h1>
-    <h3>Escolha um número entre <span class="min-valor">0</span> e <span class="max-valor">100</span></h3>
+    <h3>Escolha um número entre <span id="min-valor">0</span> e <span id="max-valor">100</span></h3>
     <div id="chute" class="mensagem">
         <div>Você disse:</div>
         <span class="box">20</span>
         <div>O número secreto é maior <i class="fa-solid fa-angles-up"></i></div>
     </div>
+
+    <script src="app/sortearNumero.js"></script>
 </body>
 
 </html>
