Aula 3 - Definindo a voz com Web

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     <h1>ACERTE O NÚMERO SECRETO</h1>
     <h3>Escolha um número entre <span id="min-valor">0</span> e <span id="max-valor">100</span></h3>
     <div id="chute" class="mensagem">
-        <div>Você disse:</div>
+        <!-- <div>Você disse:</div>
         <span class="box">20</span>
-        <div>O número secreto é maior <i class="fa-solid fa-angles-up"></i></div>
+        <div>O número secreto é maior <i class="fa-solid fa-angles-up"></i></div> -->
     </div>
 
     <script src="app/sortearNumero.js"></script>
+    <script src="app/reconhecimentoPorVoz.js"></script>
 </body>
 
 </html>
