Aula 4 - Criando a lógica do jogo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <script src="app/sortearNumero.js"></script>
     <script src="app/reconhecimentoPorVoz.js"></script>
+    <script src="app/validacao.js"></script>
 </body>
 
 </html>
