--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     <h1>ACERTE O NÚMERO SECRETO</h1>
     <h3>Escolha um número entre <span id="min-valor">0</span> e <span id="max-valor">100</span></h3>
     <div id="chute" class="mensagem">
-        <!-- <div>Você disse:</div>
+    <!-- <div>Você disse:</div>
         <span class="box">20</span>
         <div>O número secreto é maior <i class="fa-solid fa-angles-up"></i></div> -->
     </div>
+    <div class="mensagem_alert">OBS: Diga 'Game Over' caso queria finalizar o jogo.</div>
 
     <script src="app/sortearNumero.js"></script>
     <script src="app/reconhecimentoPorVoz.js"></script>
